Working on the many to many relationships

--- a/collectorapp/main_app/templates/base.html
+++ b/collectorapp/main_app/templates/base.html
@@ -20,6 +20,8 @@
                 </ul>
                 <ul class="right">
                     <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'emotion_create' %}">Add Emotion</a></li>
+                    <li><a href="{% url 'emotion_index' %}">View All Emotions</a></li>
                     <li><a href="{% url 'gems_create' %}">Create a Gem</a></li>
                     <li><a href="{% url 'index' %}">View All My Gems</a></li>
                 </ul>
