--- a/collectorapp/main_app/templates/gems/detail.html
+++ b/collectorapp/main_app/templates/gems/detail.html
@@ -25,9 +25,7 @@
       {{ display_form.as_p }}
       <input type="submit" class="btn" value="Add Display">
     </form>
-  </div>
 
-  <div class="col s6">
     <table class="striped">
       <thead>
         <tr><th>Date Shown</th><th>Offer</th><th>Status</th></tr>
@@ -45,6 +43,51 @@
   </div>
 </div>
 
+<hr>
+
+<div class="row">
+  <div class="col s6">
+    <h3>This {{ gem.gem_type }} Invokes</h3>
+    {% if gem.emotions.count %}
+      {% for emo in gem.emotions.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              A feeling of {{ emo.word }}
+            </span>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No Emotional Attachments. :(</h5>
+    {% endif %}
+  </div>
+
+  <div class="col s6">
+    <h3>Unapplied Emotions</h3>
+    {% if emotions.count %}
+      {% for emotion in emotions.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              {{ emotion.word }}
+            </span>
+          </div>
+
+          <div class="card-action">
+            <form action="{% url 'assoc_emotion' gem.id emotion.id %}" method="post">
+                {% csrf_token %}
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>This Gem Already Invokes All Emotions Available</h5>
+    {% endif %}
+  </div>
+
+</div>
 
 <script>
   var dateEl = document.getElementById('id_date_shown');
