User auth implemented, app finished

--- a/collectorapp/main_app/templates/base.html
+++ b/collectorapp/main_app/templates/base.html
@@ -20,10 +20,16 @@
                 </ul>
                 <ul class="right">
                     <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'emotion_create' %}">Add Emotion</a></li>
-                    <li><a href="{% url 'emotion_index' %}">View All Emotions</a></li>
-                    <li><a href="{% url 'gems_create' %}">Create a Gem</a></li>
-                    <li><a href="{% url 'index' %}">View All My Gems</a></li>
+                    {% if user.is_authenticated %}
+                      <li><a href="{% url 'emotion_create' %}">Add a Toy</a></li>
+                      <li><a href="{% url 'emotion_index' %}">View All Toys</a></li>
+                      <li><a href="{% url 'gems_create' %}">Add a Cat</a></li>
+                      <li><a href="{% url 'index' %}">View All My Cats</a></li>
+                      <li><a href="{% url 'logout' %}">Log Out</a></li>
+                    {% else %}
+                      <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                      <li><a href="{% url 'login' %}">Log In</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
